--- a/style.css
+++ b/style.css
@@ -18,25 +18,26 @@
 }
 
 body{
+    height: 100vh;
     font-family: 'Poppins';
     background-color: white;
     
     display: flex;
-    
+    justify-content: center;
+    align-items: center;
     
 }
 
 main{
-    float: left;
     width: 50%;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
 
-
-    margin-top: 11.7rem;
-    
+    position: relative;
+    top: -9px;
+    margin-left:7.9rem
 }
 
 
@@ -55,23 +56,20 @@ h2{
 
     display: flex;
     gap: 1.5rem;
-    margin-top: 1.2rem;
-    margin-bottom: 2rem;
+    margin-top: 1.1rem;
+    margin-bottom: 1.2rem;
 }
 
 .countdown-label{
     font-size: 0.87rem;
     color: var(--light-grey);
-    
 }
 
 
 .number-container{
-    /*background-color: #4D4C59;*/
     display: flex;
     flex-direction: column;
     align-items: center;
-    
 }
 
 
@@ -86,30 +84,25 @@ button{
     color:white;
     background-color: var(--purple);
     border: none;
-    margin-top: 2rem;
+    margin-top: 1.9rem;
+    padding:0.8rem;
+    padding-left: 2rem;
+    padding-right: 2rem;
+    border-radius: 0.7rem;
+}
+
+button:hover{
+    background-color: var(--text-color);
 }
 
 #rocket-img-container{
-    
+
     width: 50%;
-    display: flex;
-    justify-content: center;
+    margin-left: 1rem;
 }
 
 #rocket-img{
-    float: right;
-    margin-top: 9.3rem;
-    margin-top: 24vh;
-
-    /*margin-right: 3.75rem;
-    margin-left: 3.75rem;*/
-    
-
-    
-    /*width: 35%;*/
-    width: 70%;
-
-   
+    width: 86%; 
 }
 
 
@@ -123,10 +116,15 @@ button{
         
     }
     main{
-        width: 100%; 
+        width: 100%;
+        margin:0;
+        top:0;
     }
     #rocket-img-container{
         width: 100%;
+        display: flex;
+        justify-content: center;
+        margin:0;
     }
     #rocket-img{
         margin-top: 10vh;
@@ -135,6 +133,7 @@ button{
 
 #top-img{
     position: fixed;
+    top: 0;
     z-index: -1;
     width: 100%;
     min-width: 800px;
